force-app/main/default/objects/ucinn_ascendv2__Research__c/ucinn_ascendv2__Research__c.object-meta.xml
<CustomObject>
    <description>Reports any research done on the constituent during the prospect management process.</description>
    <label>Research</label>
    <nameField>
        <label>Research Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Research</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>