force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Ability_to_Give__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_Give__c</fullName>
    <label>Ability to Give</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>