force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Active_Historied__c.field-meta.xml
<CustomField>
    <fullName>Active_Historied__c</fullName>
    <label>Active/History</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>History</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>