force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Company_Founder__c.field-meta.xml
<CustomField>
    <fullName>Company_Founder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company Founder</label>
    <type>Checkbox</type>
</CustomField>