force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Date_of_Previous_Close__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Previous_Close__c</fullName>
    <label>Date of Previous Close</label>
    <type>Date</type>
</CustomField>