force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Verified</fullName>
            </value>
            <value>
                <fullName>Cleared - No Reported</fullName>
            </value>
            <value>
                <fullName>Cleared - Approved</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Risk Identified</fullName>
            </value>
            <value>
                <fullName>Affiliation</fullName>
            </value>
            <value>
                <fullName>Assets</fullName>
            </value>
            <value>
                <fullName>General Notes</fullName>
            </value>
            <value>
                <fullName>Patent Info</fullName>
            </value>
            <value>
                <fullName>Philanthropic</fullName>
            </value>
            <value>
                <fullName>Stock Information</fullName>
            </value>
            <value>
                <fullName>ASG No Contact</fullName>
            </value>
            <value>
                <fullName>Disqualification Review</fullName>
            </value>
            <value>
                <fullName>Funding Interest Reason</fullName>
            </value>
            <value>
                <fullName>Greek Giving</fullName>
            </value>
            <value>
                <fullName>Manager Update</fullName>
            </value>
            <value>
                <fullName>Manager Update-Proactive</fullName>
            </value>
            <value>
                <fullName>Salutation Update</fullName>
            </value>
            <value>
                <fullName>Record Update</fullName>
            </value>
            <value>
                <fullName>Veterinary Medicine Payments</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Stock</fullName>
            </value>
            <value>
                <fullName>Salary</fullName>
            </value>
            <value>
                <fullName>Constituent</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Additional</fullName>
            </value>
            <value>
                <fullName>Farmland</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>