force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Diligence_Deep_Dive__c.field-meta.xml
<CustomField>
    <fullName>Diligence_Deep_Dive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Diligence Deep Dive</label>
    <type>Checkbox</type>
</CustomField>