force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Document_Reporting_Year__c.field-meta.xml
<CustomField>
    <fullName>Document_Reporting_Year__c</fullName>
    <label>Document Reporting Year</label>
    <type>Date</type>
</CustomField>