force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/ERM_Referred__c.field-meta.xml
<CustomField>
    <fullName>ERM_Referred__c</fullName>
    <label>ERM Score</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>