force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Estimated_Liquidity__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Liquidity__c</fullName>
    <label>Estimated Liquidity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>