force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Foundation_Association__c.field-meta.xml
<CustomField>
    <fullName>Foundation_Association__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foundation Association</label>
    <type>Checkbox</type>
</CustomField>