force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Foundation_Officer__c.field-meta.xml
<CustomField>
    <fullName>Foundation_Officer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Foundation Officer</label>
    <type>Checkbox</type>
</CustomField>