force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Historied_Date__c.field-meta.xml
<CustomField>
    <fullName>Historied_Date__c</fullName>
    <label>Historied Date</label>
    <type>Date</type>
</CustomField>