force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Indicator_Type__c.field-meta.xml
<CustomField>
    <fullName>Indicator_Type__c</fullName>
    <label>Indicator Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Art Collector</fullName>
            </value>
            <value>
                <fullName>Elite Philanthropist</fullName>
            </value>
            <value>
                <fullName>Equestrian Hobbyist</fullName>
            </value>
            <value>
                <fullName>High Liquidity</fullName>
                <isActive>false</isActive>
                <label>High Liquidity</label>
            </value>
            <value>
                <fullName>Inheritor of Wealth</fullName>
            </value>
            <value>
                <fullName>International Property</fullName>
            </value>
            <value>
                <fullName>Luxury Hobbies/Goods</fullName>
                <isActive>false</isActive>
                <label>Luxury Hobbies/Goods</label>
            </value>
            <value>
                <fullName>Luxury Transportation</fullName>
            </value>
            <value>
                <fullName>Patent Holder</fullName>
            </value>
            <value>
                <fullName>Private Business Owner</fullName>
            </value>
            <value>
                <fullName>Private Company Investor</fullName>
            </value>
            <value>
                <fullName>Senior Level Title</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>