force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Interests_that_Align_with_ISU_s_Priorit__c.field-meta.xml
<CustomField>
    <fullName>Interests_that_Align_with_ISU_s_Priorit__c</fullName>
    <label>Interests Align with ISU&apos;s Priorities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>