force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Name_of_Stock__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Stock__c</fullName>
    <inlineHelpText>Enter asset organization name (business, company stock or foundation name) here, if the entity does not have an ID to link to the asset record.</inlineHelpText>
    <label>Organization Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>