force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Non_Profit_Board_Member__c.field-meta.xml
<CustomField>
    <fullName>Non_Profit_Board_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Non Profit Board Member</label>
    <type>Checkbox</type>
</CustomField>