force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/NTEE_Codes__c.field-meta.xml
<CustomField>
    <fullName>NTEE_Codes__c</fullName>
    <label>NTEE Codes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A - Art, Culture, and Humanities</fullName>
            </value>
            <value>
                <fullName>B - Education Institutions and Related Activities</fullName>
            </value>
            <value>
                <fullName>C - Environmental Quality Protection and Beautification</fullName>
            </value>
            <value>
                <fullName>D - Animal Related</fullName>
            </value>
            <value>
                <fullName>E - Health General and Rehabilitative</fullName>
            </value>
            <value>
                <fullName>F - Mental Health Crisis Intervention</fullName>
            </value>
            <value>
                <fullName>G - Disease Disorders Medical Disciplines</fullName>
            </value>
            <value>
                <fullName>H - Medical Research</fullName>
            </value>
            <value>
                <fullName>I - Crime Legal Related</fullName>
            </value>
            <value>
                <fullName>J - Employment Job Related</fullName>
            </value>
            <value>
                <fullName>K - Food Agriculture and Nutrition</fullName>
            </value>
            <value>
                <fullName>L - Housing Shelter</fullName>
            </value>
            <value>
                <fullName>M - Public Safety Disaster Preparedness and Relief</fullName>
            </value>
            <value>
                <fullName>N - Recreation Sports Leisure Athletics</fullName>
            </value>
            <value>
                <fullName>O - Youth Development</fullName>
            </value>
            <value>
                <fullName>P - Human Services Multipurpose and other</fullName>
            </value>
            <value>
                <fullName>Q - International Foreign Affairs and National Security</fullName>
            </value>
            <value>
                <fullName>R - Civil Rights Social Action Advocacy</fullName>
            </value>
            <value>
                <fullName>S - Community Improvement Capacity Building</fullName>
            </value>
            <value>
                <fullName>T - Philanthropy Voluntarism and Grant making Foundations</fullName>
            </value>
            <value>
                <fullName>U - Science and Technology Research Institutes Services</fullName>
            </value>
            <value>
                <fullName>V - Social Science Research Institutes</fullName>
            </value>
            <value>
                <fullName>W - Public Society Benefit Multipurpose</fullName>
            </value>
            <value>
                <fullName>X - Religion Related Spiritual Development</fullName>
            </value>
            <value>
                <fullName>Y - Mutual, Membership Benefit Organizations, Other</fullName>
            </value>
            <value>
                <fullName>Z - Internal Use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>