force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Organization_Free_Text__c.field-meta.xml
<CustomField>
    <fullName>Organization_Free_Text__c</fullName>
    <label>Organization (Free Text)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>