force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Peer_Screener__c.field-meta.xml
<CustomField>
    <fullName>Peer_Screener__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The constituent carrying out the peer screening</inlineHelpText>
    <label>Peer Screener</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Research (Peer Screener)</relationshipLabel>
    <relationshipName>Research</relationshipName>
    <type>Lookup</type>
</CustomField>