force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Peer_Screening_Time_Frame__c.field-meta.xml
<CustomField>
    <fullName>Peer_Screening_Time_Frame__c</fullName>
    <label>Peer Screening Time Frame</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2013-current</fullName>
            </value>
            <value>
                <fullName>2006-2012</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>