force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Perceive_Person_to_be_Philanthropic__c.field-meta.xml
<CustomField>
    <fullName>Perceive_Person_to_be_Philanthropic__c</fullName>
    <label>Perceive Person to be Philanthropic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Sure</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>