force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Philanthropic_Giver__c.field-meta.xml
<CustomField>
    <fullName>Philanthropic_Giver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Philanthropic Giver</label>
    <type>Checkbox</type>
</CustomField>