force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Prospect_Free_Text_Type__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Free_Text_Type__c</fullName>
    <label>Prospect Free Text Type</label>
    <type>TextArea</type>
</CustomField>