force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Prospect_Type__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Type__c</fullName>
    <description>For ISUF use</description>
    <label>Prospect Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affiliation</fullName>
            </value>
            <value>
                <fullName>Assets</fullName>
            </value>
            <value>
                <fullName>General Notes</fullName>
            </value>
            <value>
                <fullName>Patent Info</fullName>
            </value>
            <value>
                <fullName>Philanthropic</fullName>
            </value>
            <value>
                <fullName>Stock Information</fullName>
            </value>
            <value>
                <fullName>ASG No Contact</fullName>
            </value>
            <value>
                <fullName>Disqualification Review</fullName>
            </value>
            <value>
                <fullName>Funding Interest Reason</fullName>
            </value>
            <value>
                <fullName>Greek Giving</fullName>
            </value>
            <value>
                <fullName>Manager Update</fullName>
            </value>
            <value>
                <fullName>Manager Update-Proactive</fullName>
            </value>
            <value>
                <fullName>Salutation Update</fullName>
            </value>
            <value>
                <fullName>Record Update</fullName>
            </value>
            <value>
                <fullName>Veterinary Medicine Payments</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>