force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Real_Estate_Type__c.field-meta.xml
<CustomField>
    <fullName>Real_Estate_Type__c</fullName>
    <label>Real Estate Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Additional</fullName>
            </value>
            <value>
                <fullName>Farmland</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>