force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Role_PS_Willing_to_Play__c.field-meta.xml
<CustomField>
    <fullName>Role_PS_Willing_to_Play__c</fullName>
    <label>Role PS Willing to Play</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Will give information only; do not use your name</fullName>
            </value>
            <value>
                <fullName>Okay with us using your name when trying to secure an appointment</fullName>
            </value>
            <value>
                <fullName>Willing to reach out and ask if the prospect is interested in meeting with a development Officer</fullName>
            </value>
            <value>
                <fullName>Willing to reach out and explore the prospect&apos;s philanthropic interests on your own</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>