force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Spouse__c.field-meta.xml
<CustomField>
    <fullName>Spouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spouse</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Research (Spouse)</relationshipLabel>
    <relationshipName>Research_Spouse</relationshipName>
    <type>Lookup</type>
</CustomField>