force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Ticker_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Ticker_Symbol__c</fullName>
    <label>Ticker Symbol</label>
    <length>10</length>
    <type>Text</type>
</CustomField>