force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Total_Grants__c.field-meta.xml
<CustomField>
    <fullName>Total_Grants__c</fullName>
    <label>Annual Grants</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>