force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Total_Market_Assets__c.field-meta.xml
<CustomField>
    <fullName>Total_Market_Assets__c</fullName>
    <label>Total Market Assets</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>