force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/ucinn_ascendv2__Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Additional_Info__c</fullName>
    <description>Used for additional Info</description>
    <label>Additional Info</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>