force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/ucinn_ascendv2__Date_Requested__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Date_Requested__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Date Requested</label>
    <type>Date</type>
</CustomField>