force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/ucinn_ascendv2__Hours_Spent__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Hours_Spent__c</fullName>
    <label>Hours Spent</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>