force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/ucinn_ascendv2__Is_Proactive_Identification__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Is_Proactive_Identification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Proactive Identification</label>
    <type>Checkbox</type>
</CustomField>