force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/ucinn_ascendv2__Reactive_Research_Type__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Reactive_Research_Type__c</fullName>
    <label>Reactive Research Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cultivation Profile</fullName>
            </value>
            <value>
                <fullName>Background Research</fullName>
            </value>
            <value>
                <fullName>Advancement Briefing</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Real Estate</fullName>
            </value>
            <value>
                <fullName>Salary</fullName>
            </value>
            <value>
                <fullName>Stock</fullName>
            </value>
            <value>
                <fullName>External Source</fullName>
            </value>
            <value>
                <fullName>Indicators</fullName>
            </value>
            <value>
                <fullName>Wealth Indicators</fullName>
            </value>
            <value>
                <fullName>Historic Wealth Analysis</fullName>
            </value>
            <value>
                <fullName>Wealth Analysis</fullName>
            </value>
            <value>
                <fullName>ERM Verification</fullName>
            </value>
            <value>
                <fullName>Corporate News</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>