force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/ucinn_ascendv2__Research_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>ucinn_ascendv2__Research_Name_Auto_Number__c</fullName>
    <displayFormat>RES-{0000000}</displayFormat>
    <label>Research Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>