force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Valuation__c.field-meta.xml
<CustomField>
    <fullName>Valuation__c</fullName>
    <label>Reported Self-Valuation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>