force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <inlineHelpText>Represents value of real estate, farmland, stock, annual foundation assets, business ownership, annual salary, or estimated net worth.</inlineHelpText>
    <label>Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>