force-app/main/default/objects/ucinn_ascendv2__Research__c/fields/Verification_Done__c.field-meta.xml
<CustomField>
    <fullName>Verification_Done__c</fullName>
    <label>Verification Done</label>
    <type>Date</type>
</CustomField>