force-app/main/default/objects/ucinn_ascendv2__Research__c/recordTypes/Constituent_Research_Business.recordType-meta.xml
<RecordType>
    <fullName>Constituent_Research_Business</fullName>
    <active>true</active>
    <label>Constituent Research - Business</label>
</RecordType>