force-app/main/default/objects/ucinn_ascendv2__Research__c/recordTypes/Constituent_Research_External_Source.recordType-meta.xml
<RecordType>
    <fullName>Constituent_Research_External_Source</fullName>
    <active>true</active>
    <label>Vendor Wealth Indicators</label>
</RecordType>