force-app/main/default/objects/ucinn_ascendv2__Research__c/recordTypes/Constituent_Research_Foundation.recordType-meta.xml
<RecordType>
    <fullName>Constituent_Research_Foundation</fullName>
    <active>true</active>
    <label>Constituent Research - Foundation</label>
</RecordType>