force-app/main/default/objects/ucinn_ascendv2__Research__c/recordTypes/Constituent_Research_Real_Estate.recordType-meta.xml
<RecordType>
    <fullName>Constituent_Research_Real_Estate</fullName>
    <active>true</active>
    <label>Constituent Research - Real Estate</label>
</RecordType>