force-app/main/default/objects/ucinn_ascendv2__Research__c/recordTypes/Constituent_Research_Salary.recordType-meta.xml
<RecordType>
    <fullName>Constituent_Research_Salary</fullName>
    <active>true</active>
    <label>Salary/Compensation</label>
</RecordType>