force-app/main/default/objects/ucinn_ascendv2__Research__c/recordTypes/Constituent_Research_Stock.recordType-meta.xml
<RecordType>
    <fullName>Constituent_Research_Stock</fullName>
    <active>true</active>
    <label>Constituent Research - Stock</label>
</RecordType>