force-app/main/default/objects/ucinn_ascendv2__Research__c/recordTypes/ERM.recordType-meta.xml
<RecordType>
    <fullName>ERM</fullName>
    <active>true</active>
    <label>ERM</label>
</RecordType>