force-app/main/default/objects/ucinn_ascendv2__Research__c/recordTypes/Peer_Screening_Data.recordType-meta.xml
<RecordType>
    <fullName>Peer_Screening_Data</fullName>
    <active>true</active>
    <label>Peer Screening Data</label>
</RecordType>