force-app/main/default/objects/ucinn_ascendv2__Research__c/recordTypes/Prospect_Free_Text.recordType-meta.xml
<RecordType>
    <fullName>Prospect_Free_Text</fullName>
    <active>true</active>
    <label>Prospect Free Text</label>
</RecordType>