force-app/main/default/objects/ucinn_ascendv2__Research__c/recordTypes/ucinn_ascendv2__Account_Research.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Account_Research</fullName>
    <active>true</active>
    <description>Research about a specific organization/corporation.</description>
    <label>Organization Research</label>
</RecordType>