force-app/main/default/objects/ucinn_ascendv2__Research__c/recordTypes/ucinn_ascendv2__Contact_Research.recordType-meta.xml
<RecordType>
    <fullName>ucinn_ascendv2__Contact_Research</fullName>
    <active>true</active>
    <description>Research about a specific constituent.</description>
    <label>Constituent Research</label>
</RecordType>