force-app/main/default/objects/ucinn_ascendv2__Research__c/recordTypes/Wealth_Indicator_UCI.recordType-meta.xml
<RecordType>
    <fullName>Wealth_Indicator_UCI</fullName>
    <active>true</active>
    <label>Wealth Indicators</label>
</RecordType>