force-app/main/default/objects/ucinn_ascendv2__Research__c/validationRules/Historied_Date_before_Source_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Historied_Date_before_Source_Date</fullName>
    <active>false</active>
    <description>Historied Date must be before Source Date.</description>
    <errorConditionFormula>NOT(ISNULL(Historied_Date__c))&amp;&amp;
Historied_Date__c &gt; ucinn_ascendv2__Date_Requested__c</errorConditionFormula>
    <errorMessage>Historied Date must be before Source Date.</errorMessage>
</ValidationRule>